# harmonize

./: .gitignore  LICENSE  README.md  install_linux.sh  install_macos.sh  main.py  midi.py  midi_test.py  playback.py  pyproject.toml  record.py  requirements.txt  sample_pitches.txt  test_midi_compare.py
.github/workflows/: harmonize-ci.yml
ui/: form.ui  main.ui  mainwindow.py  output.py  ui.pyproject  ui_form.py  ui_main.py
ui/UI/: UI.qmlproject  qtquickcontrols2.conf
ui/UI/UI/: Constants.qml  DirectoryFontLoader.qml  qmldir
ui/UI/UI/designer/: plugin.metainfo
ui/UI/UIContent/: App.qml  Screen01.ui.qml  Screen01.ui.qml.autosave
